--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,55 @@ code {
     monospace;
 }
 
-
-.tarjeta {
-  width: 250px;
-  background-color: aqua;
-  display:flex;
-  justify-content: center;
+.productContainer {
+  margin-top: 25px;
+  display: flex;
+  align-items: center;  
   flex-direction: column;
 }
 
-.tarjeta h1 {
-  background-color: aqua;
+.productContainer h1 {
+  width: 100%;
+  text-align: center;
+  background-color: black;
 }
+
+.productRow {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.tarjeta {
+  margin: 5px;
+  width: 250px;
+  height: 350px;
+  background-color: rgb(15, 95, 95);
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 18px;
+}
+
+.tarjeta h3 {
+  background-color: rgb(15, 95, 95);
+  color: rgb(180, 184, 181)
+}
+
+.tarjeta p {
+  margin: 0;
+}
+
+.cardImg {
+  width: 80%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cardImg img {
+  width: 100%;
+}
+
