--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ code {
   align-items: center;
   flex-direction: column;
   font-size: 18px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .tarjeta h3 {
@@ -66,5 +67,12 @@ code {
 
 .cardImg img {
   width: 100%;
+}
+
+.tarjeta:hover {
+  width: 280px;
+  height: 380px;
+  background-color: rgb(7, 73, 73);
+  color:rgb(180, 184, 181);
 }
 
