--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,4 @@
 @import './global.scss';
 @import '../components/NavBar/NavBar.scss';
 @import '../components/ItemList/ItemList.scss';
+@import '../components/Item/Item.scss';
